--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,11 @@
       rel="stylesheet"
     />
     <meta name="twitter:image" content="http://lodswap.org/hero.png" />
-    <meta
-      name="twitter:description"
-      content="Farm LOD with Uniswap LP Token"
-    />
+    <meta name="twitter:description" content="Farm LOD with Uniswap LP Token" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="🌽 LOD Swap - An Evolution over Uniswap with Yield Farming"
+      content="🌽 Los Dorados - Acceralate NFT trading with LOD token"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -34,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>LOD Swap</title>
+    <title>Los Dorados - LOD token</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
