--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Farm LOD with Uniswap LP Token" />
+    <meta name="description" content="LOD Token by Los Dorados" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <meta name="twitter:image" content="http://lodswap.org/hero.png" />
-    <meta name="twitter:description" content="Farm LOD with Uniswap LP Token" />
+    <meta name="twitter:description" content="LOD Token by Los Dorados" />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
